# tiangong2pro_tf

./: LICENSE  readme.md  ros-humble-bodyctrl-msgs_0.0.0-0jammy_arm64.deb  ros-humble-bodyctrl-msgs_0.0.1-1_amd64.deb
src/bodyctrl_msgs/: CMakeLists.txt  README.md  package.xml
src/bodyctrl_msgs/doc/: BodyControlNode.md
src/bodyctrl_msgs/msg/: CmdMotorCtrl.msg  CmdSetMotorCurTor.msg  CmdSetMotorDistance.msg  CmdSetMotorPosition.msg  CmdSetMotorSpeed.msg  CmdSetTsHandCtrl.msg  CmdSetTsHandPosition.msg  CmdSetWaistMotorPos.msg  Exception.msg  Imu.msg  MotorCtrl.msg  MotorName.msg  MotorStatus.msg  MotorStatusMsg.msg  MotorStatusMsg2.msg  MotorStatusMsgPlate.msg  NodeState.msg  PowerStatus.msg  SetMotorCurTor.msg  SetMotorDistance.msg  SetMotorPosition.msg  SetMotorSpeed.msg  SetTsHandCtrl.msg  SetTsHandCtrlItem.msg  SetTsHandPosition.msg  Sri.msg  SriName.msg  TsHandName.msg  TsHandStatus.msg  TsHandStatusMsg.msg  WaistMotorStatus.msg
src/bodyctrl_msgs/srv/: MotorInit.srv  MotorResetPosition.srv  MotorStop.srv  XSensImuInit.srv
src/tiangong2pro_urdf/: CMakeLists.txt  package.xml
src/tiangong2pro_urdf/config/: display.rviz  grasp_pose.rviz  interactive.rviz
src/tiangong2pro_urdf/launch/: display.launch.py  display_with_hands.launch.py  grasp_pose.launch.py  interactive_control.launch.py
src/tiangong2pro_urdf/meshes/: ankle_pitch_l_link.STL  ankle_pitch_r_link.STL  ankle_roll_l_link.STL  ankle_roll_r_link.STL  elbow_pitch_l_link.STL  elbow_pitch_r_link.STL  head_pitch_link.STL  head_yaw_link.STL  hip_pitch_l_link.STL  hip_pitch_r_link.STL  hip_roll_r_link.STL  hip_yaw_l_link.STL  hip_yaw_r_link.STL  knee_pitch_l_link.STL  knee_pitch_r_link.STL  left_tcp_link.STL  pelvis.STL  right_tcp_link.STL  shoulder_pitch_l_link.STL  shoulder_pitch_r_link.STL  shoulder_roll_l_link.STL  shoulder_roll_r_link.STL  wrist_pitch_l_link.STL  wrist_roll_l_link.STL  wrist_roll_r_link.STL
src/tiangong2pro_urdf/scripts/: interactive_gui.py  joint_state_publisher.py
src/tiangong2pro_urdf/urdf/: tiangong2.0_complete_with_hands.xacro  tiangong2.0_pro_urdf.urdf.xacro  tiangong2.0_pro_with_hands.urdf
